--- a/app/src/app/shared/components/movement-overview/movement-overview.component.scss
+++ b/app/src/app/shared/components/movement-overview/movement-overview.component.scss
@@ -38,6 +38,8 @@
 .box {
   max-height: 2rem;
   text-align: center;
+  z-index: 1;
+
   background: #cccccc;
   color: #222222;
   -webkit-box-shadow: inset -1px 0 0 #222222,
@@ -186,8 +188,6 @@ a {
   width: 100%;
   height: 100%;
   pointer-events: none;
-  z-index: -1;
-  border: 1px solid cyan;
 }
 
 .connection-line {
